# speech-mllm-omni-embedding-rl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
_repro/: emotion_pool_grouped_v1.json  emotion_pool_grouped_v1.smoke.json  emotion_pool_grouped_v1_foldseed123.json  emotion_pool_grouped_v1_foldseed2024.json  emotion_pool_grouped_v1_foldseed20260711_cleanprov.json  emotion_pool_grouped_v1_foldseed7.json  emotion_pool_paired_v2.json  minds14_toolintent_paired.json  minds14_toolintent_v2.json  minds14_toolintent_v2.smoke.json  minds14_toolintent_v2_cleanprov.json  minds14_v2_multiplicity.json  minds14_v2_multiplicity.superseded-note.md  minds14_v2_multiplicity_v2.json  paralinguistic_negative_probe.json  speaker_probe_restatement.json
configs/: config.yaml
docs/: architecture.md  badcase_audit_samples.md  benchmark_plan.md  brainstorm.md  changelog.md  claim_evidence_map.md  controller_component_ablation.md  controller_cost_budget.md  cost_failure_table.md  cross_model_backend_readiness.md  decisions.md  dialect_route_table.md  end_to_end_chain_table.md  experiment_completion_checklist.md  experiment_completion_plan.md  experiment_coverage_summary.md  experiment_inventory.md  instruction_construction_theory.md  low_margin_cost_curve.md  main_evidence_table.md  manuscript_plan.md  omni_agentic_memory_proposal.md  omni_memory_dataset_matrix.md  omni_memory_plan_theory.md  omni_memory_system_experiment_design.md  omni_model_selection.md  paper_draft_status.md  paper_evidence_tables.md  paper_readiness_audit.md  paper_self_review.md  paper_story_outline.md  paper_table_freeze_manifest.md  project_spec.md  project_status.md  query_audio_gate_deployability.md  remaining_experiment_triage.md  research_synthesis.md  runtime_latency_summary.md  semantic_policy_methodology.md  task_level_policy_selector_theory.md  (+6 more)
scripts/: accept_gate.py  align_spoken_squad_context.py  analyze_rag_answer_context.py  audio_pool_probe.py  build_badcase_audit_samples.py  build_candidate_order_stability_summary.py  build_controller_component_summary.py  build_controller_cost_budget_summary.py  eval.sh  (+84 more)
(+117 files in other folders)
