[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-mllm-omni-embedding-rl"
version = "0.1.0"
description = "RL-Based Omni Embedding Models for Speech Tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "speechrl-common",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "mlflow",
    "transformers",
    "sentence-transformers",   # frozen omni-embed backbone (W4 flagship)
    "scikit-learn",            # linear/kNN probes (the verifiable downstream reward)
    "datasets",
    "librosa",
    "soundfile",
    "jiwer",
    # torch is installed by the local environment setup, not pinned here, so the correct
    # accelerator build can be chosen outside PyPI dependency resolution.
]

[tool.uv.sources]
speechrl-common = { path = "../../common", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/omni_embedding_rl"]

[tool.ruff]
line-length = 100
target-version = "py312"
